grocery-app-prod/K8S/KONG/kong-ingress-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backofficeportal-api
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: backofficeportal-service
          servicePort: 80
